# wacc

./: Cargo.toml  LICENSE.md  README.md  pandoc.css
examples/log/: Cargo.toml
examples/log/src/: lib.rs
examples/signature_first/: Cargo.toml
examples/signature_first/src/: lib.rs
examples/signature_lock/: Cargo.toml
examples/signature_lock/src/: lib.rs
examples/signature_unlock/: Cargo.toml
examples/signature_unlock/src/: lib.rs
examples/unlock/: Cargo.toml
examples/wast/: Makefile  branch.wast  fork_lock.wast  fork_unlock.wast  invalid_utf8.wast  lock.wast  log.wast  preimage_lock.wast  preimage_unlock.wast  pubkeysig_lock.wast  pubkeysig_unlock.wast  unlock.wast
src/: api.rs  error.rs  lib.rs  storage.rs  vm.rs
src/api/: branch.rs  check_eq.rs  check_preimage.rs  check_signature.rs  check_version.rs  log.rs  pop.rs  push.rs
src/storage/: blocks.rs  pairs.rs  stack.rs
src/vm/: builder.rs  compiler.rs  context.rs  instance.rs  key.rs  value.rs
tests/: branch.rs  forklock.rs  lock.rs  log.rs  preimage.rs  pubkeysig.rs  signature_check.rs  simple.rs  unlock.rs
