[package]
name = "wacc"
version = "1.0.1"
edition = "2021"
authors = ["Dave Grantham <dwg@linuxprogrammer.org>"]
description = "Web assembly cryptographic constructs VM implementation"
repository = "https://github.com/cryptidtech/wacc.git"
readme = "README.md"
license = "Functional Source License 1.1"

[dependencies]
multicid = { version = "1.0", git = "https://github.com/cryptidtech/multicid.git" }
multihash = { version = "1.0", git = "https://github.com/cryptidtech/multihash.git" }
multikey = { version = "1.0", git = "https://github.com/cryptidtech/multikey.git" }
multisig = { version = "1.0", git = "https://github.com/cryptidtech/multisig.git" }
multitrait = { version = "1.0", git = "https://github.com/cryptidtech/multitrait.git" }
multiutil = { version = "1.0", git = "https://github.com/cryptidtech/multiutil.git" }
thiserror = "1.0"
wasmtime = "19.0"

[dev-dependencies]
hex = "0.4"
