[package]
name = "wacc"
version = "1.0.4"
edition = "2021"
authors = ["Dave Grantham <dwg@linuxprogrammer.org>"]
description = "Web assembly cryptographic constructs VM implementation"
repository = "https://github.com/cryptidtech/wacc.git"
readme = "README.md"
license = "Functional Source License 1.1"

[dependencies]
log = "0.4.22"
multicid = { version = "1.0", git = "https://github.com/cryptidtech/multicid.git" }
multihash = { version = "1.0", git = "https://github.com/cryptidtech/multihash.git" }
multikey = { version = "1.0", git = "https://github.com/cryptidtech/multikey.git" }
multisig = { version = "1.0", git = "https://github.com/cryptidtech/multisig.git" }
multitrait = { version = "1.0", git = "https://github.com/cryptidtech/multitrait.git" }
multiutil = { version = "1.0", git = "https://github.com/cryptidtech/multiutil.git" }
test-log = { version = "0.2.16", features = ["trace", "color"] }
thiserror = "1.0"
tracing = "0.1.40"
wasmtime = "19.0"

[dev-dependencies]
hex = "0.4"
